# Centerline-Extraction-of-Coronary-Vessels-

./: README.md  README.md~
VTKVessel910815/VTKVess/: ALL_BUILD.vcproj  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  AortaDetection.cxx  AortaDetection.h  CMakeCache.txt  CMakeLists.txt  ConnectedComponent.cpp  ConnectedComponent.h  ConvertingGrayScaleToBinary.cxx  ConvertingGrayScaleToBinary.h  CoronaryTracking.cxx  CoronaryTracking.h  Evaluation.cpp  Evaluation.h  FastMarching.cpp  FastMarching.h  FastMarchingFilterOutput1.mhd  FastMarchingFilterOutput2.mha  FastMarchingFilterOutput2.mhd  FastMarchingFilterOutput3.mha  FastMarchingFilterOutput3.mhd  FastMarchingFilterOutput3.raw.vvi  FastMarchingFilterOutput4.mha  FastMarchingFilterOutput4.mhd  FastMarchingFilterOutput4.raw.vvi  FastMarchingLevelSetBase.cxx  FastMarchingLevelSetBase.h  ImageReadImageSeriesWrite.cpp  ImageReadImageSeriesWrite.h  RayCAsting.cpp  RayCAsting.h  RegionGrowing.cxx  RegionGrowing.h  Resampler.cxx  Resampler.h  Resampletobeisotropic.cxx  Resampletobeisotropic.h  UpgradeLog.htm  VTKRayCaster.cpp  (+19 more)
VTKVessel910815/VTKVess/Backup/: Vessel.sln
VTKVessel910815/VTKVess/Debug/: vessel.exp  vessel.idb  vessel.lib
VTKVessel910815/VTKVess/ITKIOFactoryRegistration/: itkImageIOFactoryRegisterManager.h  itkTransformIOFactoryRegisterManager.h
VTKVessel910815/VTKVess/Release/: vessel.exp  vessel.idb  vessel.lib
VTKVessel910815/VTKVess/ZERO_CHECK.dir/Debug/: BuildLog.htm
VTKVessel910815/VTKVess/ZERO_CHECK.dir/Release/: BuildLog.htm
VTKVessel910815/VTKVess/vessel.dir/Debug/: BuildLog.htm
(+2 files in other folders)
